Number of sales reported and friend ratings done.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="your_sales">Your Sales</string>
     <string name="nearby_sales">Nearby Sales</string>
     <string name="title_activity_nearby_sales">Nearby Sales</string>
+    <string name="number_of_reports">Number of Sales reported: </string>
 
 </resources>
