--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,21 +11,19 @@
     <string name="title_activity_new_request">New Request</string>
     <string name="title_activity_new_sale">New Sale</string>
     <string name="app_name">ShoppingWithFriends</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="welcome">Welcome to Shopping With Friends</string>
     <string name="error_account_exists">There already exists an account under this email</string>
     <string name="find_friends">Find Friends</string>
     <string name="list_friends">List Friends</string>
-    <string name="firebase">https://2340.firebasio.com</string>
     <string name="logout">Logout</string>
     <string name="remove_friend">Remove Friend</string>
     <string name="add_request">Add Request</string>
     <string name="your_requests">Your Requests</string>
     <string name="add_sale">Add Sale</string>
-    <string name="your_sales">Your Sales</string>
     <string name="nearby_sales">Nearby Sales</string>
     <string name="title_activity_nearby_sales">Nearby Sales</string>
     <string name="number_of_reports">Number of Sales reported: </string>
+    <string name="name">Name</string>
+    <string name="price">Price</string>
 
 </resources>
